added rooms, broke share

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="emote_stickers">Stickers</string>
     <string name="emote_smiles">Smiles</string>
     <string name="dialog_upload_title">Enter youtube video link</string>
+
+    <string name="activity_rooms_title">Rooms</string>
 </resources>
